2009-08-05 Holger Vogt
 * measure.c: add comments (not yet complete)

2009-08-04 Dietmar Warning
 * configure.in, ngspice.h: looking for unistd.h & usage
 * bsim2/b2ld.c: correct args size
 * bsim3soi/b4soild.c: init Cbg1
 * cmath2.c: init vector d

2009-07-30 Dietmar Warning
 * frontend/inpcom.c: refurbish spice3 syntax for r models with alternative 
   value like: "r1 a b 2k rmodel"
 * parser/inp2r.c, inp2l.c, inp2c.c: allow r,l,c element instantiation e.g. r=50

2009-07-28 Holger Vogt
 * ChangLog repaired (broken since rev. 1.417)
 * inpcom.c repaired (broken in CVS)

2009-07-25 Dietmar Warning
 * bsim3v32/b3v32temp.c: init struct pParam
 * ngspice.h: prototype for getpid under mingw
 * main.c, winmain.c: small cosmetics

2009-07-21 Dietmar Warning
 * bsim3v32/b3v32temp.c, bsim4/b4temp.c: backup to the original code - 
   without the FREE(model->pSizeDependParamKnot), if we want call models in a loop,
   we should introduce this unique to all models

2009-06-11 Holger Vogt
 * conf.c: editor notepad.exe also with MS Visual C++
 * /examples/TransImpedanceAmp/output.net: change integration method
   to 'gear' for achieving convergence
 * cpitf.c, ivars.c: add some comments
 * inp.c, dotcard.c: allow .meas
 * example/inverter.sp: add .meas .. WHEN ...

2009-05-24 Dietmar Warning
 * tcl-testbench4.tcl: correct path to codemodel
 * FB14.cir: better breakthrough current in bas70

2009-05-21 Holger Vogt
 * evaluate.c, outitf.c, sim.h: use SV_ADMITTANCE for plotting @dev[gxx]
 * defines.h change signal prototype for _MSC_VER
 
2009-05-21 Paolo Nenzi
 * src/frontend/postcoms.c: Fix from Lemaitre Laurent to avoid a segmentation
   fault when v->v_plot->pl_scale is NULL.

2009-05-16 Holger Vogt
 * inpcom.c  lines 778ff: allow the following .model names:
   First character is alphabetical
   First character is digit, second alpha, third digit
   First character is digit, second alpha, third alpha, fourth digit

2009-05-16 Holger Vogt
 * inpcom.c  lines 2940ff fix case 'q'