@@ -1,3 +1,8 @@
+2009-08-08 Holger Vogt
+ * measure.c: add more comments
+ * example/func_cap.sp, inverter.sp, inverter2.sp: hint to
+   start examples only in interactive mode.
+
 2009-08-05 Holger Vogt
  * measure.c: add comments (not yet complete)
 
